Fix spacing issues

--- a/assets/css/spreadprivacy.css
+++ b/assets/css/spreadprivacy.css
@@ -55,7 +55,7 @@ a:focus {
 }
 
 .site-header-content {
-    padding: 7vw 4vw;
+    padding: 3vw 4vw;
     padding-top: 0;
     min-height: initial;
     padding-top: 7px;
